Deleted text about OPEN_API_KEY

--- a/Lab1/Lab1_StarterNotebook.ipynb
+++ b/Lab1/Lab1_StarterNotebook.ipynb
@@ -59,9 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Ensure OpenAI Key Is Correctly Setup\n",
-    "\n",
-    "Note that I use \"OPEN_API_KEY\" instead of \"OPENAI_API_KEY\". This is because I inputted \"OPEN_API_KEY\" in my systems enviorment variables. So make sure to use whatever you have set up in enviorment variables. If you have followed my instruction it should be \"**OPENAI_API_KEY**\""
+    "## Step 3: Ensure OpenAI Key Is Correctly Setup"
    ]
   },
   {
