--- a/Lab1/Lab1_StarterNotebook.ipynb
+++ b/Lab1/Lab1_StarterNotebook.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.11.8\n",
+      "Python 3.11.10\n",
       "openai 1.52.0\n"
      ]
     }
@@ -64,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "import openai\n",
     "import os\n",
@@ -208,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "OpenAI",
+   "display_name": "OpenAILAB",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
